--- a/main.ipynb
+++ b/main.ipynb
@@ -1574,11 +1574,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "From these calculations the difference seems that during 2000-2012 yield spread only seemed to be slightly positively correlated future volatiliy of both small caps and large caps. The opposite goes from the time period of 2012 to 2023 where the future volatility of both small caps and large caps is negative to the yield spread. "
+   ]
   }
  ],
  "metadata": {
